<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back1"
    tools:context="solofeed.team.tthelpme.Quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/choos_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/userback1"
            android:text="@string/choose"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:background="@mipmap/lang_b_b" />

        <Button
            android:id="@+id/basic_b_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/basic"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_blue_bright"
            android:drawableLeft="@android:drawable/ic_menu_help"
            android:ellipsize="start"
            android:text="@string/basic_mode_desc"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/advanced"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_blue_bright"
            android:drawableLeft="@android:drawable/ic_menu_help"
            android:ellipsize="start"
            android:text="@string/advanced_desc"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
