<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back2"
    tools:context="solofeed.team.tthelpme.home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="276dp"
            android:layout_height="131dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/tt" />

        <Button
            android:id="@+id/claim_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_light"
            android:paddingBottom="20dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="20dp"
            android:text="@string/reclamation"
            android:textSize="18sp" />

        <Button
            android:id="@+id/claim_log_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_light"
            android:paddingBottom="20dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="20dp"
            android:text="@string/Claimslog"
            android:textSize="18sp" />

        <Button
            android:id="@+id/myinfo_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_light"
            android:paddingBottom="20dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="20dp"
            android:text="@string/myinformation"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
